--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@
 }
 
 .playcard {
-    border: 3px solid black;
+    border: 3px solid #555;
     border-radius: 10px;
     transform-origin: center;
     width: 60px;
     height: 100px;
     background-color: #EEE;
-    font-size:25px;
+    font-size:29px;
+    text-shadow: 1px 1px #333;
+    box-shadow: 3px 1px 2px #444;
 }
 .centerboard {
     border: 1px solid black;
@@ -33,8 +35,26 @@
     position: absolute;
     right: 5;
 }
+.logBody {
+  font-size: 22px;
+}
 .floatRight {
     float: right;
+}
+.red{
+  color:red;
+}
+.blue {
+  color:blue;
+}
+.green {
+  color:green;
+}
+.yellow {
+  color:yellow;
+}
+.purple {
+  color:purple;
 }
 /* The Modal (background) */
 .modal {
@@ -62,7 +82,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     animation-name: animatetop;
     animation-duration: 0.4s;
-    top: 100px;
+    top: 70px;
 }
 #modaltext {
     height:400px;
@@ -90,6 +110,10 @@
 }
 
 /* The Close Button */
+.btn {
+  height: 50px;
+  margin-bottom: 10px;
+}
 .close {
     color: #aaa;
     float: right;
