--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     font-size:29px;
     text-shadow: 1px 1px #333;
     box-shadow: 3px 1px 2px #444;
+    transition: left 1s, top 1s;
 }
 .centerboard {
     border: 1px solid black;
